# Flare

./: .gitignore  CMakeLists.txt  readme.md
cmake/: CopyAssets.cmake  FetchSlang.cmake  SyncShaders.cmake
src/01-triangle/: CMakeLists.txt  main.cpp
src/01-triangle/shaders/: helloworld.slang  shaders.slang  triangle_hardcode.slang  triangle_vertexbuffer.slang
src/02-textured-triangle/: CMakeLists.txt  main.cpp
src/02-textured-triangle/shaders/: textured-triangle.slang
src/03-gltf/: CMakeLists.txt  main.cpp
src/03-gltf/assets/: .gitignore
src/03-gltf/shaders/: gltf.frag  gltf.slang  gltf.vert  textured-triangle.slang
src/Flare/FlareApp/: Application.cpp  Application.h  Camera.cpp  Camera.h  Window.cpp  Window.h
src/Flare/FlareGraphics/: AsyncLoader.cpp  AsyncLoader.h  BasicGeometry.cpp  BasicGeometry.h  CalcTangent.cpp  CalcTangent.h  FlareImgui.cpp  FlareImgui.h  GltfScene.cpp  GltfScene.h  GpuDevice.cpp  GpuDevice.h  GpuResources.cpp  GpuResources.h  LightData.cpp  LightData.h  Mesh.cpp  Mesh.h  ModelManager.cpp  ModelManager.h  RingBuffer.cpp  RingBuffer.h  Scene.cpp  Scene.h  ShaderCompiler.cpp  ShaderCompiler.h  VkHelper.cpp  VkHelper.h  VmaUsage.cpp
src/Flare/FlareGraphics/CoreShaders/: BindlessCommon.glsl  BrdfLut.frag  Cubemap.frag  Cubemap.vert  CubemapCommon.glsl  DrawBounds.frag  DrawBounds.vert  FrustumCull.comp  GBuffer.frag  GBuffer.vert  IrradianceMap.frag  LightingPass.frag  NormalEncoding.glsl  PrefilteredCube.frag  ShadowPass.frag  ShadowPass.vert  Skybox.frag  Skybox.vert  SrgbToLinear.glsl
src/Flare/FlareGraphics/Passes/: DrawBoundsPass.cpp  DrawBoundsPass.h  FrustumCullPass.cpp  FrustumCullPass.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h
